<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4A4A4A"
    tools:context=".DadosActivity">

    <TextView
        android:id="@+id/textTituloD6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tituloD6"
        android:textColor="#E891AF"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="124dp"
        android:textColor="#E891AF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />


    <ImageView
        android:id="@+id/imageDado"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultado"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonRolar"
        android:layout_width="348dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#E891AF"
        android:text="@string/rolar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="467dp" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="348dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#E891AF"
        android:text="@string/voltar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="559dp" />

</LinearLayout>